# servitut-engine

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  render.yaml
.claude/: settings.local.json
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 20260323_01_initial_schema.py  59d5f1aee10b_add_servituterklaringer_table.py  6d5d9d7e6c5a_add_attest_pipeline_state_to_documents.py  acc4f85bdef2_add_review_fields_to_servitutter.py  b6f0e4c2a1d1_add_attest_v2_fields_to_servitutter.py
app/api/: error_handlers.py  health.py  main.py
app/core/: config.py  (+1 more)
docs/: Sådan virker Servitut Engine.md  aalborg_test_plan.md  attest_pipeline_consolidated_plan.md  attest_registration_model_plan.md  local_test_stack.md  render-hosting-og-multi-user-arkitektur.md  servituterklaering_plan.md  stor_attest_pipeline_plan.md  tmv-import-og-playwright-roadmap.md
prompts/: classify_attest_block.txt  enrich_servitut.txt  extract_attest_candidate.txt  extract_servitut.txt  extract_tinglysningsattest.txt  generate_report.txt  ocr_page.txt
scripts/: run_pipeline.py  run_worker.sh  test_ocr_pipeline.py
streamlit_app/: Home.py  ui.py
tasks/: lessons.md  todo.md
tests/: test_api_infrastructure.py  test_attest_assembler.py  test_attest_extractor.py  test_attest_fanout.py  test_attest_merger.py  test_attest_scope_resolver.py  test_attest_segmenter.py  test_auth_api.py  test_case_service.py  test_chunking.py  test_config.py  test_database.py  test_declarations_api.py  test_document_classifier.py  test_documents_api.py  test_extraction_schema.py  test_extraction_service.py  test_jobs_api.py  test_llm_service.py  test_matrikel_service.py  test_ocr_pipeline.py  test_pdf_service.py  test_report_editor_service.py  test_report_generation.py  test_reports_api.py  test_security.py  test_tinglysning_import_service.py  test_tmv_browser_service.py
(+83 files in other folders)
