[project]
name = "servitut-engine"
version = "1.0.0"
description = "PDF-baseret servitut-motor til udtræk og AI-assisteret redegørelse"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "bcrypt<4.1",
    "celery>=5.4.0",
    "fastapi>=0.115.0",
    "passlib[bcrypt]>=1.7.4",
    "uvicorn[standard]>=0.32.0",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "ocrmypdf>=16.0.0",
    "pillow>=11.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "redis>=5.2.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "streamlit>=1.41.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
]
